fp-library/tests/ui/coyoneda_not_clone.stderr
error[E0277]: the trait bound `Coyoneda<'_, VecBrand, {integer}>: Clone` is not satisfied
  --> tests/ui/coyoneda_not_clone.rs:11:15
   |
11 |     assert_clone(&coyo);
   |     ------------ ^^^^^ the trait `Clone` is not implemented for `Coyoneda<'_, VecBrand, {integer}>`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `assert_clone`
  --> tests/ui/coyoneda_not_clone.rs:6:20
   |
 6 | fn assert_clone<T: Clone>(_: &T) {}
   |                    ^^^^^ required by this bound in `assert_clone`
